--- a/index4.5.html
+++ b/index4.5.html
@@ -48,16 +48,16 @@
       		</div>
       		<div class="container cards">
       			<div class="flex-row">
-    				<div class="card">Zmień tę linię. Holiday 2017</div>
-    				<div class="card">Zmień tę linię. Cheap holidays</div>
-    				<div class="card">Zmień tę linię. Europe and Orient</div>
-    				<div class="card">Zmień tę linię. Cruises</div>
-    				<div class="card">Zmień tę linię. Walking tours</div>
-    				<div class="card">Zmień tę linię. Holidays with children</div>
-    				<div class="card">Zmień tę linię. Active holiday</div>
-    				<div class="card">Zmień tę linię. City break</div>
-    				<div class="card">Zmień tę linię. All inclusive</div>
-    				<div class="card">Zmień tę linię. Hotels</div>
+    				<div class="card">New Holiday 2017</div>
+    				<div class="card">New Cheap holidays</div>
+    				<div class="card">New Europe and Orient</div>
+    				<div class="card">Last minute Cruises</div>
+    				<div class="card">New Walking tours</div>
+    				<div class="card">Cheap Holidays with children</div>
+    				<div class="card">Flash sale Active holiday</div>
+    				<div class="card">City break</div>
+    				<div class="card">Holiday Deals All inclusive</div>
+    				<div class="card">Cheap Hotels</div>
     			</div>
 			</div>
 		<footer>
