changed text in html

--- a/index4.5.html
+++ b/index4.5.html
@@ -48,16 +48,16 @@
       		</div>
       		<div class="container cards">
       			<div class="flex-row">
-    				<div class="card">Other Holiday 2017</div>
-    				<div class="card">Other Cheap holidays</div>
-    				<div class="card">Other Europe and Orient</div>
-    				<div class="card">Other minute Cruises</div>
-    				<div class="card">Other Walking tours</div>
-    				<div class="card">Other Holidays with children</div>
-    				<div class="card">Other sale Active holiday</div>
-    				<div class="card">Other break</div>
-    				<div class="card">Other Deals All inclusive</div>
-    				<div class="card">Other Hotels</div>
+    				<div class="card">Holiday 2017</div>
+    				<div class="card">Cheap holidays</div>
+    				<div class="card">Europe and Orient</div>
+    				<div class="card">Last minute Cruises</div>
+    				<div class="card">New Walking tours</div>
+    				<div class="card">Holidays with children</div>
+    				<div class="card">Active holiday</div>
+    				<div class="card">City break</div>
+    				<div class="card">All inclusive</div>
+    				<div class="card">Hotels</div>
     			</div>
 			</div>
 		<footer>
