Added Hi! in HTML

--- a/index4.5.html
+++ b/index4.5.html
@@ -48,16 +48,16 @@
       		</div>
       		<div class="container cards">
       			<div class="flex-row">
-    				<div class="card">Holiday 2017</div>
-    				<div class="card">Cheap holidays</div>
-    				<div class="card">Europe and Orient</div>
-    				<div class="card">Last minute Cruises</div>
-    				<div class="card">New Walking tours</div>
-    				<div class="card">Holidays with children</div>
-    				<div class="card">Active holiday</div>
-    				<div class="card">City break</div>
-    				<div class="card">All inclusive</div>
-    				<div class="card">Hotels</div>
+    				<div class="card">Hi! Holiday 2017</div>
+    				<div class="card">Hi! Cheap holidays</div>
+    				<div class="card">Hi! Europe and Orient</div>
+    				<div class="card">Hi! Last minute Cruises</div>
+    				<div class="card">Hi! New Walking tours</div>
+    				<div class="card">Hi! Holidays with children</div>
+    				<div class="card">Hi! Active holiday</div>
+    				<div class="card">Hi! City break</div>
+    				<div class="card">Hi! All inclusive</div>
+    				<div class="card">Hi! Hotels</div>
     			</div>
 			</div>
 		<footer>
