--- a/index4.5.html
+++ b/index4.5.html
@@ -48,16 +48,16 @@
       		</div>
       		<div class="container cards">
       			<div class="flex-row">
-    				<div class="card">Holiday 2017</div>
-    				<div class="card">Cheap holidays</div>
-    				<div class="card">Europe and Orient</div>
-    				<div class="card">Last minute Cruises</div>
-    				<div class="card">New Walking tours</div>
-    				<div class="card">Holidays with children</div>
-    				<div class="card">Active holiday</div>
-    				<div class="card">City break</div>
-    				<div class="card">All inclusive</div>
-    				<div class="card">Hotels</div>
+    				<div class="card"> My Holiday 2017</div>
+    				<div class="card">My Cheap holidays</div>
+    				<div class="card">New Europe and Orient</div>
+    				<div class="card">Last minute Cruises !</div>
+    				<div class="card">My Walking tours</div>
+    				<div class="card"> My Holidays with children</div>
+    				<div class="card"> My Active holiday</div>
+    				<div class="card"> My City break</div>
+    				<div class="card">All inclusive !</div>
+    				<div class="card">Cheap Hotels</div>
     			</div>
 			</div>
 		<footer>
